--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.0.7"
+    "body-parser": "^1.18.2",
+    "expect": "^22.4.3",
+    "express": "^4.16.3",
+    "mocha": "^5.1.1",
+    "mongodb": "^3.0.7",
+    "mongoose": "^5.0.16",
+    "supertest": "^3.0.0"
   }
 }
