--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server.js",
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
-  "engines":{
-    "node":"9.5.0"
+  "engines": {
+    "node": "9.5.0"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.2",
     "expect": "^22.4.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mocha": "^5.1.1",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.16",
