--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mocha": "^5.1.1",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.16",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "validator": "^9.4.1"
   }
 }
